Added basic styling for blog pages

--- a/src/content/blog/post-1.mdx
+++ b/src/content/blog/post-1.mdx
@@ -1,6 +1,6 @@
 ---
-title: Testing page
-description: Description for the test page
+title: Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, minus.
+description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero provident at reprehenderit quos ducimus deserunt qui ab, dolorum autem accusamus corporis ipsa dignissimos eveniet est maxime optio, exercitationem laborum adipisci!
 date: 2023-01-20
 ---
 
