Added images to test post

--- a/src/content/blog/post-1.mdx
+++ b/src/content/blog/post-1.mdx
@@ -9,3 +9,10 @@ date: 2023-01-20
 This page has testing stuff on it. I am just seeing how markdown works.
 
 - Hopefully I can format it
+
+Below is a test image
+
+<img src={testImage} alt="A rocketship in space." />
+import testImage from "../../assets/images/test-image.png";
+
+Some text below the content
